test/tests/ingress-in-both-equal-weight/test1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-in-both-equal-weight
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: test
  namespace: test-in-both-equal-weight
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
          name: http
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 100m
            memory: 50Mi
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: test-in-both-equal-weight
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  labels:
    name: nginx
  namespace: test-in-both-equal-weight
spec:
  rules:
  - host: test-in-both-equal-weight.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
---
apiVersion: multicluster.cyclops.io/v1alpha
kind: GSLB
metadata:
  name: test
  namespace: test-in-both-equal-weight
hostnames:
- test-in-both-equal-weight.test
objectReference:
  kind: Ingress
  name: nginx
